po: update po/sr_RS@latin/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/event.po
+++ b/po/sr_RS@latin/event.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-18 18:47+0000\n"
+"PO-Revision-Date: 2016-12-28 15:50+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -193,7 +193,7 @@ msgstr "Da li je ovo javni događaj"
 
 #: CRM/Event/DAO/Event.php
 msgid "Is Online Registration"
-msgstr ""
+msgstr "Je onlajn registracija"
 
 #: CRM/Event/DAO/Event.php
 msgid "Event Registration Link Text"
@@ -270,27 +270,27 @@ msgstr ""
 
 #: CRM/Event/DAO/Event.php
 msgid "ThankYou Title"
-msgstr ""
+msgstr "Zahvalnica naslov"
 
 #: CRM/Event/DAO/Event.php
 msgid "ThankYou Text"
-msgstr ""
+msgstr "Zahvalnica tekst"
 
 #: CRM/Event/DAO/Event.php
 msgid "Pay Later Allowed"
-msgstr ""
+msgstr "Dozvoljeno naknadno plaćanje"
 
 #: CRM/Event/DAO/Event.php
 msgid "Pay Later Receipt Text"
-msgstr ""
+msgstr "Priznanica za naknadno plaćanje - tekst"
 
 #: CRM/Event/DAO/Event.php
 msgid "Partial Payments Enabled"
-msgstr ""
+msgstr "Delimične uplate uključene"
 
 #: CRM/Event/DAO/Event.php
 msgid "Minimum Initial Amount"
-msgstr ""
+msgstr "Minimalan početni iznos"
 
 #: CRM/Event/DAO/Event.php
 msgid "Allow Multiple Registrations"
@@ -322,11 +322,11 @@ msgstr "Potrebno odobrenje - tekst"
 
 #: CRM/Event/DAO/Event.php
 msgid "Is an Event Template"
-msgstr ""
+msgstr "Je šablon događaja"
 
 #: CRM/Event/DAO/Event.php
 msgid "Event Template Title"
-msgstr ""
+msgstr "Naslov šablona događaja"
 
 #: CRM/Event/DAO/Event.php
 msgid "Created By Contact ID"
@@ -453,7 +453,7 @@ msgstr "'%1' je obrisan"
 
 #: CRM/Event/Form/ManageEvent/Delete.php
 msgid "Template Deleted"
-msgstr ""
+msgstr "Šablon obrisan"
 
 #: CRM/Event/Form/ManageEvent/Delete.php
 msgid "Event Deleted"
@@ -564,7 +564,7 @@ msgstr ""
 
 #: CRM/Event/Form/ManageEvent/Fee.php
 msgid "Select either of the dates."
-msgstr ""
+msgstr "Izaberite jedan od datuma."
 
 #: CRM/Event/Form/ManageEvent/Fee.php
 msgid "%1 is already used for Discount Name."
@@ -628,7 +628,7 @@ msgstr "Prikaži lokaciju?"
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Profile for Additional Participants"
-msgstr ""
+msgstr "Profil za dodatne učesnike"
 
 #: CRM/Event/Form/ManageEvent/Registration.php CRM/Event/Page/EventInfo.php
 msgid "Register Now"
@@ -679,7 +679,7 @@ msgstr ""
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Please enter the number of hours (as an integer)."
-msgstr ""
+msgstr "Unesite broj sati (kao ceo broj)."
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Introductory Text"
@@ -793,7 +793,7 @@ msgstr "Konfiguracija događaja"
 
 #: CRM/Event/Form/ManageEvent.php
 msgid "New Event Template"
-msgstr ""
+msgstr "Novi šablon događaja"
 
 #: CRM/Event/Form/ManageEvent.php templates/CRM/Event/Page/DashBoard.tpl
 msgid "New Event"
@@ -806,7 +806,7 @@ msgstr "Menadžment događaja"
 
 #: CRM/Event/Form/ManageEvent.php
 msgid "Manage Event Templates"
-msgstr ""
+msgstr "Menadžment šablona događaja"
 
 #: CRM/Event/Form/Participant.php
 msgid "Event Registration for %1"
@@ -1314,11 +1314,11 @@ msgstr ""
 
 #: CRM/Event/Form/Registration.php
 msgid "Sorry, currently only a single seat is available for this option."
-msgstr ""
+msgstr "Izvinite, za ovu opciju je dostupno samo još jedno mesto."
 
 #: CRM/Event/Form/Registration.php
 msgid "Sorry, currently only %1 seats are available for this option."
-msgstr ""
+msgstr "Izvinite, za ovu opciju je dostupno još %1 mesta."
 
 #: CRM/Event/Form/Registration.php CRM/Event/Page/EventInfo.php
 msgid ""
@@ -1387,9 +1387,9 @@ msgstr "Obriši učesnike"
 #: CRM/Event/Form/Task/Delete.php
 msgid "%count participant deleted."
 msgid_plural "%count participants deleted."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%count učesnik obrisan."
+msgstr[1] "%count učesnika obrisano."
+msgstr[2] "%count učesnika obrisano."
 
 #: CRM/Event/Form/Task/ParticipantStatus.php
 msgid "Change All Statuses"
@@ -1600,7 +1600,7 @@ msgstr "Obriši učešće"
 
 #: CRM/Event/Selector/Search.php
 msgid "Record Refund"
-msgstr ""
+msgstr "Snimi refundiranje"
 
 #: CRM/Event/Selector/Search.php templates/CRM/Event/Page/UserDashboard.tpl
 msgid "Event Date(s)"
@@ -2236,7 +2236,7 @@ msgstr ""
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Multiple Participants"
-msgstr ""
+msgstr "Više učesnika"
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
@@ -2402,7 +2402,7 @@ msgstr ""
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.tpl
 msgid "Confirmation Email"
-msgstr ""
+msgstr "Email sa potvrdom"
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.tpl
 msgid ""
@@ -2764,7 +2764,7 @@ msgstr ""
 
 #: templates/CRM/Event/Form/Registration/Register.tpl
 msgid "including yourself"
-msgstr ""
+msgstr "uključujući i vas"
 
 #: templates/CRM/Event/Form/Registration/Register.tpl
 msgid ""
@@ -2779,7 +2779,7 @@ msgstr ""
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid "You have been added to the WAIT LIST for this event."
-msgstr ""
+msgstr "Dodati ste na listu za čekanje za ovaj događaj."
 
 #: templates/CRM/Event/Form/Registration/ThankYou.tpl
 #: xml/templates/message_templates/event_offline_receipt_html.tpl
@@ -2789,7 +2789,7 @@ msgstr ""
 msgid ""
 "If space becomes available you will receive an email with a link to a web "
 "page where you can complete your registration."
-msgstr ""
+msgstr "Ukoliko se oslobodi mesto, dobićete email sa linkom ka veb stranici gde možete završiti vašu registraciju."
 
 #: templates/CRM/Event/Form/Registration/ThankYou.tpl
 #: xml/templates/message_templates/event_offline_receipt_html.tpl
@@ -2807,7 +2807,7 @@ msgstr "Vaša registracija je podneta."
 msgid ""
 "Once your registration has been reviewed, you will receive an email with a "
 "link to a web page where you can complete the registration process."
-msgstr ""
+msgstr "Kada vaša registracija bude pregledana, primićete email sa linkom za veb stranicu na kojoj možete završti registracioni proces."
 
 #: templates/CRM/Event/Form/Registration/ThankYou.tpl
 msgid "An email with event details has been sent to %1."
@@ -2857,7 +2857,7 @@ msgstr "Ako pretražujete po imenu učesnika, proverite vaš unos"
 
 #: templates/CRM/Event/Form/Search/Results.hlp
 msgid "Actual Participant Count"
-msgstr ""
+msgstr "Broj učesnika"
 
 #: templates/CRM/Event/Form/Search/Results.hlp
 msgid ""
@@ -2928,7 +2928,7 @@ msgstr ""
 #: templates/CRM/Event/Form/Task/Batch.tpl
 msgid ""
 "Click <strong>Update Participant(s)</strong> below to save all your changes."
-msgstr ""
+msgstr "Kliknite na <strong>Ažuriraj učesnika(e)</strong> ispod da snimite sve izmene."
 
 #: templates/CRM/Event/Form/Task/Cancel.tpl
 msgid ""
@@ -2985,7 +2985,7 @@ msgstr ""
 
 #: templates/CRM/Event/Form/Task.tpl
 msgid "Number of selected participants: %1"
-msgstr ""
+msgstr "Broj odabranih učesnika: %1"
 
 #: templates/CRM/Event/Import/Form/DataSource.hlp
 msgid "Required Participant Data"
@@ -3293,7 +3293,7 @@ msgstr "Nema aktivnih događaja za prikaz."
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "You can <a href=\"%1\">Create a New Event</a> now."
-msgstr ""
+msgstr "Možete <a href=\"%1\">kreirati novi događaj</a>."
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "Recent Registrations"
@@ -3960,7 +3960,7 @@ msgstr ""
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/participant_confirm_html.tpl
 msgid "Click here to transfer or cancel your registration."
-msgstr ""
+msgstr "Kliknite ovde da transferujete ili otkažete vašu registraciju."
 
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid ""
