po: update po/sr_RS@latin/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/report.po
+++ b/po/sr_RS@latin/report.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-25 19:12+0000\n"
+"PO-Revision-Date: 2016-12-28 15:18+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -482,7 +482,7 @@ msgstr ""
 
 #: CRM/Report/Form/Contribute/Bookkeeping.php
 msgid "Contribution #"
-msgstr ""
+msgstr "Donacija #"
 
 #: CRM/Report/Form/Contribute/Bookkeeping.php
 msgid "Cheque #"
@@ -530,13 +530,13 @@ msgstr ""
 
 #: CRM/Report/Form/Contribute/Detail.php
 msgid "Total Amount (Contributions)"
-msgstr ""
+msgstr "Ukupan iznos (donacija)"
 
 #: CRM/Report/Form/Contribute/Detail.php
 #: CRM/Report/Form/Contribute/SoftCredit.php
 #: CRM/Report/Form/Contribute/Summary.php CRM/Report/Form/Member/Summary.php
 msgid "Total Contributions"
-msgstr ""
+msgstr "Ukupno donacija"
 
 #: CRM/Report/Form/Contribute/Detail.php
 #: CRM/Report/Form/Contribute/SoftCredit.php
@@ -561,7 +561,7 @@ msgstr ""
 #: CRM/Report/Form/Contribute/Detail.php
 #: CRM/Report/Form/Member/ContributionDetail.php
 msgid "View Details of this Contribution."
-msgstr ""
+msgstr "Pregledajte detalje za ovu donaciju."
 
 #: CRM/Report/Form/Contribute/History.php
 #: CRM/Report/Form/Contribute/SoftCredit.php
@@ -632,7 +632,7 @@ msgstr ""
 #: CRM/Report/Form/Contribute/HouseholdSummary.php
 #: CRM/Report/Form/Contribute/OrganizationSummary.php
 msgid "View this contribution."
-msgstr ""
+msgstr "Pregledajte ovu donaciju."
 
 #: CRM/Report/Form/Contribute/LoggingSummary.php
 msgid "View details for this update"
@@ -676,7 +676,7 @@ msgstr ""
 
 #: CRM/Report/Form/Contribute/PCP.php
 msgid "Amount Received"
-msgstr ""
+msgstr "Primljena suma"
 
 #: CRM/Report/Form/Contribute/PCP.php
 msgid "Number of Donors"
@@ -688,7 +688,7 @@ msgstr ""
 
 #: CRM/Report/Form/Contribute/PCP.php
 msgid "Goal Total"
-msgstr ""
+msgstr "Cilj - ukupno"
 
 #: CRM/Report/Form/Contribute/PCP.php
 msgid "Total Committed"
@@ -696,11 +696,11 @@ msgstr ""
 
 #: CRM/Report/Form/Contribute/PCP.php
 msgid "Total Received"
-msgstr ""
+msgstr "Ukupno primljeno"
 
 #: CRM/Report/Form/Contribute/PCP.php
 msgid "Total Donors"
-msgstr ""
+msgstr "Ukupno donatora"
 
 #: CRM/Report/Form/Contribute/Recur.php
 msgid "Last name, First name"
@@ -708,11 +708,11 @@ msgstr "Prezime, ime"
 
 #: CRM/Report/Form/Contribute/Recur.php
 msgid "Amount Contributed to Date"
-msgstr ""
+msgstr "Ukupan iznos do sada"
 
 #: CRM/Report/Form/Contribute/Recur.php
 msgid "Total Amount Contributed"
-msgstr ""
+msgstr "Ukupan iznos donacija"
 
 #: CRM/Report/Form/Contribute/Recur.php
 msgid "Frequency interval"
@@ -790,7 +790,7 @@ msgstr "Novi donator"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "View contributions for this Country."
-msgstr ""
+msgstr "Vidi donacije za ovu zemlju."
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "View repeatDetails for this state."
@@ -798,7 +798,7 @@ msgstr ""
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "View Contribution details for this contact"
-msgstr ""
+msgstr "Vidi detalje donacije za ovaj kontakt"
 
 #: CRM/Report/Form/Contribute/SoftCredit.php
 msgid "Soft Credit Name"
@@ -840,7 +840,7 @@ msgstr ""
 
 #: CRM/Report/Form/Contribute/SoftCredit.php
 msgid "view contact summary"
-msgstr ""
+msgstr "vidi kratak pregled kontakta"
 
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Contribution Amount Stats"
@@ -848,7 +848,7 @@ msgstr ""
 
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Contribution Avg"
-msgstr ""
+msgstr "Prosečan iznos donacije"
 
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Soft Credit Amount Stats"
@@ -1071,7 +1071,7 @@ msgstr ""
 #: CRM/Report/Form/Grant/Statistics.php
 #: templates/CRM/Report/Form/Grant/Statistics.tpl
 msgid "Summary Statistics"
-msgstr ""
+msgstr "Kratak pregled statistika"
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "By Grant Type"
@@ -1179,7 +1179,7 @@ msgstr "Vaš izveštaj je uspešno kopiran kao \"%1\". Trenutno gledate kopiju."
 msgid ""
 "\"%1\" report has been successfully created. You are currently viewing the "
 "new report instance."
-msgstr ""
+msgstr "\"%1\" izveštaj je uspešno kreiran. Trenutno gledate novi izveštaj."
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Bounce Count"
@@ -1199,7 +1199,7 @@ msgstr ""
 
 #: CRM/Report/Form/Mailing/Clicks.php
 msgid "Click Count"
-msgstr ""
+msgstr "Broj klikova"
 
 #: CRM/Report/Form/Mailing/Clicks.php
 msgid "Clicks: %1"
@@ -1207,7 +1207,7 @@ msgstr "Klikovi: %1"
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Unsubscribed"
-msgstr ""
+msgstr "Odjava"
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Opted-out"
@@ -1405,7 +1405,7 @@ msgstr "Odabrani %1 izveštaj je obrisan."
 
 #: CRM/Report/Form.php
 msgid "Report Templates"
-msgstr ""
+msgstr "Šabloni izveštaja"
 
 #: CRM/Report/Form.php
 msgid "Select Columns"
@@ -1633,7 +1633,7 @@ msgstr "Mail greška"
 
 #: CRM/Report/Form.php
 msgid "Records"
-msgstr ""
+msgstr "Zapisi"
 
 #: CRM/Report/Form.php
 msgid "Supplementary Address Field 1"
@@ -1717,7 +1717,7 @@ msgstr ""
 
 #: CRM/Report/Page/Instance.php CRM/Report/Page/Report.php
 msgid "Template Not Found"
-msgstr ""
+msgstr "Šablon nije pronađen"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "Report(s) created from the template: %1"
@@ -1741,13 +1741,13 @@ msgstr ""
 
 #: CRM/Report/Page/Report.php
 msgid "%1 - Template"
-msgstr ""
+msgstr "%1 - šablon"
 
 #: CRM/Report/Page/Report.php
 msgid ""
 "Could not find the report template. Make sure the report template is "
 "registered and / or url is correct."
-msgstr ""
+msgstr "Šablon izvetaja nije pronađen. Proverite da li je šablon izveštaja registrovan i da li je url ispravan."
 
 #: templates/CRM/Report/Form/Actions.tpl
 msgid "Existing report(s) from this template"
@@ -1795,7 +1795,7 @@ msgstr "Pristup"
 
 #: templates/CRM/Report/Form/Grant/Statistics.tpl
 msgid "Report Filters"
-msgstr ""
+msgstr "Filteri izveštaja"
 
 #: templates/CRM/Report/Form/Grant/Statistics.tpl
 msgid "All Grants"
@@ -2049,7 +2049,7 @@ msgstr "Postojeći izveštaj(i)"
 
 #: templates/CRM/Report/Page/TemplateList.tpl
 msgid "There are currently no Report Templates."
-msgstr ""
+msgstr "Trenutno nema šablona izveštaja."
 
 #: CRM/Report/BAO/ReportInstance.php
 msgid "Save a copy..."
@@ -2216,7 +2216,7 @@ msgstr "% Održanih donatora"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "Initial Date Range:"
-msgstr ""
+msgstr "Početni raspon datuma:"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "Total Donations"
@@ -2224,7 +2224,7 @@ msgstr "Ukupno donacija"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "Second Date Range:"
-msgstr ""
+msgstr "Drugi raspon datuma:"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "% Change"
@@ -2258,7 +2258,7 @@ msgstr ""
 #: CRM/Report/Form/Event/ParticipantListCount.php
 #: CRM/Report/Form/Event/Summary.php
 msgid "Total Income"
-msgstr ""
+msgstr "Ukupan prihod"
 
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "Registered by Participant ID"
