po: update po/sr_RS@latin/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/mailing.po
+++ b/po/sr_RS@latin/mailing.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-24 17:33+0000\n"
+"PO-Revision-Date: 2016-12-28 13:33+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -23,7 +23,7 @@ msgstr "CiviMail neće poslati email nepostojećem kontaktu: %1"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "CiviMail will not send an empty mail body, Skipping: %1"
-msgstr ""
+msgstr "CiviMail neće poslati mail bez sadržaja, preskačem: %10"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Field \"%1\" is required."
@@ -55,11 +55,11 @@ msgstr "Sms poruka"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Use Template"
-msgstr ""
+msgstr "Koristi šablon"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Update Template"
-msgstr ""
+msgstr "Ažuriraj šablon"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Save As New Template"
