--- a/po/en_GB/report.po
+++ b/po/en_GB/report.po
@@ -5,13 +5,14 @@
 # Translators:
 # Graham <graham@mc3.coop>, 2013
 # Graham <graham@mc3.coop>, 2013
+# John Kingsnorth <kingsnorth.j@gmail.com>, 2017
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-01-04 15:24+0000\n"
+"Last-Translator: John Kingsnorth <kingsnorth.j@gmail.com>\n"
 "Language-Team: English (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -654,7 +655,7 @@ msgstr "Amount (%1)"
 
 #: CRM/Report/Form/Contribute/OrganizationSummary.php
 msgid "View contact summary for this organization."
-msgstr "View contact summary for this organization."
+msgstr "View contact summary for this organisation."
 
 #: CRM/Report/Form/Contribute/PCP.php
 msgid "Supporter Contact Type"
