--- a/po/en_GB/admin.po
+++ b/po/en_GB/admin.po
@@ -5,6 +5,7 @@
 # Translators:
 # Jean jacques BRODZIAK <inactive+ziako@transifex.com>, 2014
 # Jean jacques BRODZIAK <inactive+ziako@transifex.com>, 2014
+# John Kingsnorth <kingsnorth.j@gmail.com>, 2017
 # Nick Holden <nrh11@le.ac.uk>, 2012
 # Nick Holden <nrh11@le.ac.uk>, 2012
 # wax miguel <waxmigs2902@gmail.com>, 2016
@@ -13,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-01-04 15:12+0000\n"
+"Last-Translator: John Kingsnorth <kingsnorth.j@gmail.com>\n"
 "Language-Team: English (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -48,7 +49,7 @@ msgstr "Selected contact type can not be deleted. Make sure contact type doesn't
 
 #: CRM/Admin/Form/ContactType.php
 msgid "The Contact Type '%1' has been saved."
-msgstr "Le type de contact '%1' a été enregistré"
+msgstr "The Contact Type '%1' has been saved."
 
 #: CRM/Admin/Form/Extensions.php templates/CRM/Admin/Page/Extensions.tpl
 msgid "The system administrator has disabled this feature."
@@ -320,12 +321,12 @@ msgstr "Message Templates"
 #: CRM/Admin/Form/MessageTemplates.php
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "Message Title"
-msgstr "Titre du message"
+msgstr "Message Title"
 
 #: CRM/Admin/Form/MessageTemplates.php
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "Message Subject"
-msgstr "Sujet du message"
+msgstr "Message Subject"
 
 #: CRM/Admin/Form/MessageTemplates.php
 msgid "View System Default Message Template"
@@ -341,7 +342,7 @@ msgstr "Separator?"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Menu '%1' has been saved."
-msgstr "Le menu '%1' a été sauvé"
+msgstr "Menu '%1' has been saved."
 
 #: CRM/Admin/Form/OptionGroup.php
 msgid "Dropdown Options"
@@ -790,7 +791,7 @@ msgstr "Configure how many events should be shown on the dashboard. This overrid
 
 #: CRM/Admin/Form/Preferences/Event.php
 msgid "show all"
-msgstr "En attente"
+msgstr "show all"
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "CiviMail Component Settings"
@@ -1005,11 +1006,11 @@ msgstr "Send as"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "before"
-msgstr ""
+msgstr "before"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "after"
-msgstr ""
+msgstr "after"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Action Condition"
