--- a/po/en_GB/drupal-civicrm.po
+++ b/po/en_GB/drupal-civicrm.po
@@ -5,13 +5,14 @@
 # Translators:
 # Graham <graham@mc3.coop>, 2013
 # Graham <graham@mc3.coop>, 2013
+# John Kingsnorth <kingsnorth.j@gmail.com>, 2017
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-02-28 09:17+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-01-04 15:06+0000\n"
+"Last-Translator: John Kingsnorth <kingsnorth.j@gmail.com>\n"
 "Language-Team: English (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,7 +25,7 @@ msgstr ""
 msgid ""
 "Add/remove association rules and configure settings. Also perform manual "
 "synchronization."
-msgstr "Add/remove association rules and configure settings. Also perform manual synchronization."
+msgstr "Add/remove association rules and configure settings. Also perform manual synchronisation."
 
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
