--- a/po/en_GB/common-components.po
+++ b/po/en_GB/common-components.po
@@ -6,13 +6,14 @@
 # Andi Chandler <andi@gowling.com>, 2016
 # Graham <graham@mc3.coop>, 2013
 # Graham <graham@mc3.coop>, 2013
+# John Kingsnorth <kingsnorth.j@gmail.com>, 2017
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-01-04 14:59+0000\n"
+"Last-Translator: John Kingsnorth <kingsnorth.j@gmail.com>\n"
 "Language-Team: English (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2201,15 +2202,15 @@ msgstr "Balance Due"
 
 #: CRM/Admin/Form/ScheduleReminders.php CRM/Contribute/Form/Task/PDF.php
 msgid "From Email"
-msgstr ""
+msgstr "From Email"
 
 #: CRM/Campaign/Form/Task/Interview.php CRM/Report/Form.php
 msgid "Ascending"
-msgstr ""
+msgstr "Ascending"
 
 #: CRM/Campaign/Form/Task/Interview.php CRM/Report/Form.php
 msgid "Descending"
-msgstr ""
+msgstr "Descending"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 #: CRM/Contribute/Form/UpdateSubscription.php
@@ -2220,7 +2221,7 @@ msgstr "Number of Installments"
 #: CRM/Contribute/Form/Contribution/Confirm.php
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Make Payment"
-msgstr ""
+msgstr "Make Payment"
 
 #: CRM/Contribute/Form/Contribution/Main.php CRM/Event/Form/Participant.php
 #: CRM/Member/Form/Membership.php CRM/Member/Form/MembershipRenewal.php
@@ -2234,7 +2235,7 @@ msgstr "You do not have all the permissions needed for this page."
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 #: CRM/Pledge/DAO/PledgeBlock.php
 msgid "Show Recurring Donation Start Date?"
-msgstr ""
+msgstr "Show Recurring Donation Start Date?"
 
 #: CRM/Contribute/Form/Task/PickProfile.php
 #: CRM/Member/Form/Task/PickProfile.php
@@ -2294,4 +2295,4 @@ msgstr "Total Opens"
 #: CRM/Pledge/BAO/Pledge.php CRM/Report/Form/Pledge/Detail.php
 #: CRM/Report/Form/Pledge/Pbnp.php
 msgid "Next Payment Amount"
-msgstr ""
+msgstr "Next Payment Amount"
