po: update po/sr_RS@latin/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/menu.po
+++ b/po/sr_RS@latin/menu.po
@@ -3,13 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016
+# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016-2017
 # Kevin Levie <kevin@levity.nl>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-20 15:16+0000\n"
+"PO-Revision-Date: 2017-01-06 10:37+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -180,11 +180,11 @@ msgstr "CiviContribute kontrolna tabla"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Contribution"
-msgstr ""
+msgstr "Nova donacija"
 
 msgctxt "menu"
 msgid "Contribution Summary - Chart View"
-msgstr ""
+msgstr "Donacija - kratak pregled - dijagram"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -194,7 +194,7 @@ msgstr "CiviContribute"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Manage Contribution Pages"
-msgstr ""
+msgstr "Menadžment stranica za doniranje"
 
 msgctxt "menu"
 msgid "Title and Settings"
@@ -202,7 +202,7 @@ msgstr "Naslov i podešavanja"
 
 msgctxt "menu"
 msgid "Contribution Amounts"
-msgstr ""
+msgstr "Iznosi donacija"
 
 msgctxt "menu"
 msgid "Membership Section"
@@ -235,11 +235,11 @@ msgstr "Dodaj proizvod na ovu stranicu"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Contribution Page"
-msgstr ""
+msgstr "Nova stranica za doniranje"
 
 msgctxt "menu"
 msgid "Manage Premiums"
-msgstr ""
+msgstr "Menadžment premijuma"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -273,7 +273,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Contributions"
-msgstr ""
+msgstr "Donacije"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -287,16 +287,16 @@ msgstr "Dodatne informacije"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Find Contributions"
-msgstr ""
+msgstr "Nađi donacije"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Import Contributions"
-msgstr ""
+msgstr "Import donacija"
 
 msgctxt "menu"
 msgid "AdditionalInfo Form"
-msgstr ""
+msgstr "Formular za dodatne informacije"
 
 msgctxt "menu"
 msgid "Cancel Subscription"
@@ -312,7 +312,7 @@ msgstr "Ažuriraj pretplatu"
 
 msgctxt "menu"
 msgid "Financial Type Accounts"
-msgstr ""
+msgstr "Računi finansijskog tipa"
 
 msgctxt "menu"
 msgid "Accounting Batch"
@@ -347,7 +347,7 @@ msgstr "Email profaktura"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Personal Campaign Pages"
-msgstr ""
+msgstr "Stranice lične kampanje"
 
 msgctxt "menu"
 msgid "Setup a Personal Campaign Page - Account Information"
@@ -1048,7 +1048,7 @@ msgstr "Menadžment događaja"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Event Templates"
-msgstr ""
+msgstr "Šabloni događaja"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1337,7 +1337,7 @@ msgstr "CiviCRM vesti"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Getting Started"
-msgstr ""
+msgstr "Prvi koraci"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1805,7 +1805,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Contribution Summary"
-msgstr ""
+msgstr "Kratak pregled donacije"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
