--- a/po/sr_RS@latin/mailing.po
+++ b/po/sr_RS@latin/mailing.po
@@ -3,12 +3,12 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016
+# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016-2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-28 13:33+0000\n"
+"PO-Revision-Date: 2017-01-06 10:51+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -67,7 +67,7 @@ msgstr ""
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Select Template"
-msgstr ""
+msgstr "Odaberi šablon"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Your Letter"
@@ -539,7 +539,7 @@ msgstr ""
 
 #: CRM/Mailing/Form/Approve.php CRM/Mailing/Selector/Browse.php
 msgid "Approve/Reject Mailing"
-msgstr ""
+msgstr "Odobri/Odbij mailing"
 
 #: CRM/Mailing/Form/Approve.php
 msgid "Approve/Reject Note"
