--- a/po/nl_NL/event.po
+++ b/po/nl_NL/event.po
@@ -5,7 +5,7 @@
 # Translators:
 # brouwser <brouwer@ee-atwork.nl>, 2012
 # Geert Buyse <geert.buyse@chiro.be>, 2016
-# HanV <han.velthuis@home.nl>, 2013-2016
+# HanV <han.velthuis@home.nl>, 2013-2017
 # HanV <han.velthuis@home.nl>, 2012
 # HanV <han.velthuis@home.nl>, 2011
 # Jeroen Groothuismink <jeroengroothuismink@gmail.com>, 2012-2013
@@ -18,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-09 17:53+0000\n"
-"Last-Translator: Geert Buyse <geert.buyse@chiro.be>\n"
+"PO-Revision-Date: 2017-01-09 14:29+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3805,13 +3805,13 @@ msgid ""
 " Attended will receive a confirmation email and their payment status will be"
 " set to completed. If this is not you want to do, you can change their "
 "participant status by editing their event registration record directly."
-msgstr ""
+msgstr "Deelnemers waarvan de status wijzigt van openstaande betaling naar aangemeld of deelgenomen krijgen een bevestiging per e-mail en de betalingsstatus  wordt afgerond. Als u dit niet wil, dan kunt u hun deelnemersstatus wijzigen door hun aanmelding te wijzigen."
 
 #: CRM/Event/Form/Task/Batch.php
 msgid ""
 "Participants whose status is changed TO any of the following will be "
 "automatically notified via email: %1"
-msgstr ""
+msgstr "Deelnemers waarvan de status in een van de volgende is gewijzigd, krijgen automatisch een e-mail: %1"
 
 #: CRM/Event/Task.php
 msgid "Delete participants from event"
@@ -3922,7 +3922,7 @@ msgid ""
 "Update field values for each participant as needed. To set a field to the same value for ALL rows, enter that value for the first participation and then click the\n"
 "        <strong>Copy icon</strong>\n"
 "        (next to the column title)."
-msgstr ""
+msgstr "Pas waar nodig de gegevens voor elke deelnemer aan. Wilt u een veld voor al deze deelnemers dezelfde waarde geven, voer die waarde dan in bij de eerste deelnemer en klik vervolgens op het pictogram <strong>Kopiëren</strong> (naast de kolomtitel)."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
