--- a/po/nl_NL/common-components.po
+++ b/po/nl_NL/common-components.po
@@ -5,7 +5,7 @@
 # Translators:
 # brouwser <brouwer@ee-atwork.nl>, 2012
 # Geert Buyse <geert.buyse@chiro.be>, 2016
-# HanV <han.velthuis@home.nl>, 2013-2016
+# HanV <han.velthuis@home.nl>, 2013-2017
 # HanV <han.velthuis@home.nl>, 2011-2012
 # HanV <han.velthuis@home.nl>, 2011
 # Jeroen Groothuismink <jeroengroothuismink@gmail.com>, 2012
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-10 15:55+0000\n"
+"PO-Revision-Date: 2017-01-09 14:18+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -2210,11 +2210,11 @@ msgstr "E-mailadres afzender"
 
 #: CRM/Campaign/Form/Task/Interview.php CRM/Report/Form.php
 msgid "Ascending"
-msgstr ""
+msgstr "Oplopend"
 
 #: CRM/Campaign/Form/Task/Interview.php CRM/Report/Form.php
 msgid "Descending"
-msgstr ""
+msgstr "Aflopend"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 #: CRM/Contribute/Form/UpdateSubscription.php
@@ -2239,7 +2239,7 @@ msgstr "U hebt niet alle rechten die nodig zijn om deze pagina te gebruiken."
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 #: CRM/Pledge/DAO/PledgeBlock.php
 msgid "Show Recurring Donation Start Date?"
-msgstr ""
+msgstr "Startdatum periodieke donatie tonen?"
 
 #: CRM/Contribute/Form/Task/PickProfile.php
 #: CRM/Member/Form/Task/PickProfile.php
