--- a/po/nl_NL/pledge.po
+++ b/po/nl_NL/pledge.po
@@ -3,7 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# HanV <han.velthuis@home.nl>, 2013-2016
+# HanV <han.velthuis@home.nl>, 2013-2017
 # HanV <han.velthuis@home.nl>, 2012
 # HanV <han.velthuis@home.nl>, 2011-2012
 # Jeroen Groothuismink <jeroengroothuismink@gmail.com>, 2012
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-01-09 14:34+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -783,11 +783,11 @@ msgstr "Toezegging betaalherinnering"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "First installment payment"
-msgstr ""
+msgstr "Eerste termijnbetaling"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "Day of month installments paid"
-msgstr ""
+msgstr "Betaaldag van de maandtermijn "
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge Acknowledgement Sent"
@@ -819,7 +819,7 @@ msgstr "Frequentie-interval weergeven?"
 
 #: CRM/Pledge/DAO/PledgeBlock.php
 msgid "Allow Edits to Recurring Donation Start Date?"
-msgstr ""
+msgstr "Wijzigen van startdatum van periodieke donaties toestaan?"
 
 #: CRM/Pledge/Task.php
 msgid "Export pledges"
