po: update po/nl_NL/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/mailing.po
+++ b/po/nl_NL/mailing.po
@@ -3,7 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# HanV <han.velthuis@home.nl>, 2013-2016
+# HanV <han.velthuis@home.nl>, 2013-2017
 # HanV <han.velthuis@home.nl>, 2012
 # HanV <han.velthuis@home.nl>, 2011
 # Jeroen Groothuismink <jeroengroothuismink@gmail.com>, 2012
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-01-09 14:38+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2519,7 +2519,7 @@ msgstr "Geopend/Geklikt"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Document Body"
-msgstr ""
+msgstr "Document Body"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Campaign %1 %2"
@@ -2597,11 +2597,11 @@ msgstr "Te volgen URL"
 
 #: CRM/Mailing/Form/Component.php
 msgid "Please provide either HTML or TEXT format for the Body."
-msgstr ""
+msgstr "Vul a.u.b. het tekstbericht of het HTML-bericht in."
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Public View"
-msgstr ""
+msgstr "Public View"
 
 #: CRM/Mailing/Selector/Event.php
 msgid "Total Tracked Opens"
@@ -2635,4 +2635,4 @@ msgstr "NB: Wanneer deze functie is ingeschakeld worden alle links in het tekstg
 
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Public url"
-msgstr ""
+msgstr "Public URL"
