po: update po/sr_RS@latin/provinces.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/provinces.po
+++ b/po/sr_RS@latin/provinces.po
@@ -3,13 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Bojana Radulović <bojana@catalystbalkans.org>, 2017
 # Đorđe Kolaković <djordje@catalystbalkans.org>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-24 17:32+0000\n"
-"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-01-10 00:16+0000\n"
+"Last-Translator: Bojana Radulović <bojana@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -247,15 +248,15 @@ msgstr "Mala spoljna ostrva Sjedinjenih Država"
 
 msgctxt "province"
 msgid "Armed Forces Europe"
-msgstr ""
+msgstr "Oružane snage Evrope"
 
 msgctxt "province"
 msgid "Armed Forces Americas"
-msgstr ""
+msgstr "Oružane snage Amerike"
 
 msgctxt "province"
 msgid "Armed Forces Pacific"
-msgstr ""
+msgstr "Oružane snage Pacifika"
 
 msgctxt "province"
 msgid "Alberta"
@@ -279,7 +280,7 @@ msgstr "Njufaundlend i Labrador"
 
 msgctxt "province"
 msgid "Northwest Territories"
-msgstr ""
+msgstr "Severozapadne teritorije"
 
 msgctxt "province"
 msgid "Nova Scotia"
@@ -355,7 +356,7 @@ msgstr "Himačal Pradeš"
 
 msgctxt "province"
 msgid "Jammu and Kashmir"
-msgstr ""
+msgstr "Jamu i Kašmir"
 
 msgctxt "province"
 msgid "Jharkhand"
@@ -511,31 +512,31 @@ msgstr "Zapadno Pomorje"
 
 msgctxt "province"
 msgid "Abu Zaby"
-msgstr ""
+msgstr "Abu Dhabi"
 
 msgctxt "province"
 msgid "'Ajman"
-msgstr ""
+msgstr "Ajman"
 
 msgctxt "province"
 msgid "Al Fujayrah"
-msgstr ""
+msgstr "Al Fudžajrah"
 
 msgctxt "province"
 msgid "Ash Shariqah"
-msgstr ""
+msgstr "Aš Šarikah"
 
 msgctxt "province"
 msgid "Dubayy"
-msgstr ""
+msgstr "Dubai"
 
 msgctxt "province"
 msgid "Ra's al Khaymah"
-msgstr ""
+msgstr "Ras Al Khaimah"
 
 msgctxt "province"
 msgid "Dac Lac"
-msgstr ""
+msgstr "Dak Lak"
 
 msgctxt "province"
 msgid "Umm al Qaywayn"
@@ -671,15 +672,15 @@ msgstr "Zabul"
 
 msgctxt "province"
 msgid "Berat"
-msgstr ""
+msgstr "Berat"
 
 msgctxt "province"
 msgid "Bulqizë"
-msgstr ""
+msgstr "Bulćize"
 
 msgctxt "province"
 msgid "Delvinë"
-msgstr ""
+msgstr "Deljvin"
 
 msgctxt "province"
 msgid "Devoll"
@@ -691,47 +692,47 @@ msgstr ""
 
 msgctxt "province"
 msgid "Durrës"
-msgstr ""
+msgstr "Drač"
 
 msgctxt "province"
 msgid "Elbasan"
-msgstr ""
+msgstr "Elbasan"
 
 msgctxt "province"
 msgid "Fier"
-msgstr ""
+msgstr "Fier"
 
 msgctxt "province"
 msgid "Gramsh"
-msgstr ""
+msgstr "Gramš"
 
 msgctxt "province"
 msgid "Gjirokastër"
-msgstr ""
+msgstr "Đirokaštra"
 
 msgctxt "province"
 msgid "Has"
-msgstr ""
+msgstr "Has"
 
 msgctxt "province"
 msgid "Kavajë"
-msgstr ""
+msgstr "Kavaja"
 
 msgctxt "province"
 msgid "Kolonjë"
-msgstr ""
+msgstr "Kolonja"
 
 msgctxt "province"
 msgid "Korçë"
-msgstr ""
+msgstr "Korće"
 
 msgctxt "province"
 msgid "Krujë"
-msgstr ""
+msgstr "Kruje"
 
 msgctxt "province"
 msgid "Kuçovë"
-msgstr ""
+msgstr "Kućove"
 
 msgctxt "province"
 msgid "Kukës"
